Revert "fixed word wrap"
This reverts commit 253df93d4dddb23bf5d9a5c4e27cfce9675bfc3b.

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,8 +17,6 @@
 }
 
 .longtitle {
-     white-space: pre-wrap;
+     word-break: break-all;
 }
-
-
 
